fixed - gap in main page

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,6 +2,8 @@
     // min-height: 70vh;
     width: 100%;
     background-color: #f8f9fa;
+    margin:0;
+
 }
 /* On screens that are above 499 */
 @media (min-width:499px) {
@@ -14,6 +16,7 @@
         flex-direction: column;
         min-height: 100vh;
         width: 100%;
+        margin:0;
     }
 }
 
