--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -22,7 +22,7 @@
 .__footer-top {
     display: flex;
     
-    background-color: #f5f5f5;
+    background-color: white;
     // margin: 0 3em 0 3em;
     padding: 1em 6vw 1em 6vw;
     flex-wrap: wrap;
