--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -50,6 +50,7 @@ a {
     }
 }
 .second-block{
+    background-color: white;
     position: relative;
     // padding: 4em 3em 4em 3em;
     font-family: 'Source';
@@ -73,6 +74,11 @@ a {
             min-width: 170px;
             width: 350px;
         }
+        .second-block-1{
+            text-align: center;
+            margin: 0 5vw 0 5vw;
+            padding: 3em 1em 0em 1em;
+        }
     }
     /* On screens that are 993px or more */
     @media screen and (min-width: 993px) {
@@ -84,6 +90,7 @@ a {
     }
     /* Retour aux screens globaux */
     .second-block-2{
+        background-color: white;
         padding: 1em 3em 2em 3em;
         display: flex;
         flex-direction: row;
@@ -93,6 +100,7 @@ a {
                 display: flex;
                 flex-direction: row;
                 flex-wrap: wrap;
+                max-width: 95vw;
             }
             .__card-prez {
                 flex:1;
@@ -158,6 +166,7 @@ a {
     flex-wrap: wrap;
     justify-content: center;
     text-align: center;
+
     .third-block-1{
         display: flex;
         flex-direction: column;
@@ -185,6 +194,11 @@ a {
             
             min-width: 123px;
             max-width: 420px;
+        }
+        .third-block-1{
+            display: flex;
+            flex-direction: column;
+            margin: 0 5vw 0 5vw;
         }
     }
     /* On screens that are 601px or more, set the background color to blue */
